@@ -34,10 +34,11 @@
   the JavaScript file.  Not all options are supported
   because some don't make sense in this context. Valid
   options are: \code{"require"}, \code{"results.header"},
-  \code{"variables"}, \code{"preprocess"},
-  \code{"calculate"}, \code{"printout"},
-  \code{"doPrintout"} and \code{"load.silencer"}.  If not
-  set, their default values are used. See
+  \code{"variables"}, \code{"globals"},
+  \code{"preprocess"}, \code{"calculate"},
+  \code{"printout"}, \code{"doPrintout"} and
+  \code{"load.silencer"}.  If not set, their default values
+  are used. See
   \code{\link[rkwarddev:rk.JS.doc]{rk.JS.doc}} for
   details.}
 
